<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp">

    <!-- Row 1: 1234567890 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button style="@style/KeyStyle" android:text="1" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="2" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="3" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="4" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="5" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="6" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="7" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="8" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="9" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="0" android:layout_weight="1" />
    </LinearLayout>

    <!-- Row 2: @#%&*-+() -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button style="@style/KeyStyle" android:text="\@" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="#" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="%" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="&amp;" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="*" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="-" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="+" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="(" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text=")" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="/" android:layout_weight="1" />
    </LinearLayout>

    <!-- Row 3: Symbols -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button style="@style/KeyStyle" android:text="!" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="?" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="\&quot;" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="\'" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text=":" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text=";" android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="," android:layout_weight="1" />
        <Button style="@style/KeyStyle" android:text="." android:layout_weight="1" />
        <Button style="@style/KeyStyle.Special" android:id="@+id/key_delete" android:text="⌫" android:layout_weight="2" />
    </LinearLayout>

    <!-- Row 4: Switch, Space, Enter -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button style="@style/KeyStyle.Special" android:id="@+id/key_switch_abc" android:text="@string/key_abc" android:layout_weight="2" />
        <Button style="@style/KeyStyle" android:id="@+id/key_space" android:text="@string/key_space" android:layout_weight="4" />
        <Button style="@style/KeyStyle.Accent" android:id="@+id/key_enter" android:text="@string/key_enter" android:layout_weight="2" />
    </LinearLayout>

</LinearLayout>
